--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 	          <ul class="nav nav-pills flex-column">
 	      
 	            <li class="nav-item">
-	              <a class="nav-link" href="/japan/">japan</a>
+	              <a class="nav-link" href="/uae/">United Arab Emirates</a>
 	            </li>
 	            <li class="nav-item">
 	              <a class="nav-link" href="/india/">india</a>
@@ -32,7 +32,7 @@
 	              <a class="nav-link" href="/sweden/">sweden</a>
 	            </li>
 	            <li class="nav-item">
-	              <a class="nav-link" href="/norway/">norway</a>
+	              <a class="nav-link" href="/austria/">norway</a>
 	            </li>
 	          </ul>
 	         </nav>
