--- a/templates/data.html
+++ b/templates/data.html
@@ -1,15 +1,17 @@
 {% extends 'index.html'%}
 {% block content%}
-<div>
+	{% for c in cities%}	
+		<div>
 
 	        <div class="card" style="width: 18rem;">
 				  <img src="..." class="card-img-top" alt="...">
 				  <div class="card-body">
-				    <h5 class="card-title">Card title</h5>
+				    <h5 class="card-title">{{c}}</h5>
 				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				    {response.cityname}
+				    
 			
 				  </div>
 			</div>
 		</div>
+		{% endfor %}
 {% endblock content%}
